updated projects page

--- a/html/projects.html
+++ b/html/projects.html
@@ -60,10 +60,10 @@
   </div>
   
   <div class="project">
-    <div class="project-image big-image" style="background-image: url(../images/kfna-tech.png);"></div>
+    <div class="project-image big-image" style="background-image: url(../images/blueberry-farm.png);"></div>
   
   <div class="project-padding">
-    <h3 class="biz-name">KFNA TECHNOLOGY</h3>
+    <h3 class="biz-name"></h3>
     <p class="industry">
       <strong>Industry:</strong>
       Cybersecurity
