--- a/html/about.html
+++ b/html/about.html
@@ -22,7 +22,7 @@
 
       <div class="row">
         <div class="column column-1">
-          <img class="portrait" src="../images/kenia-b-w-landscape.jpeg" />
+          <img class="portrait" src="../images/kenia-burn.jpg" />
           <p class="summary">Summary of Skills</p>
           <ul class="skills-list">
             <li class="list-item">HTML & CSS</li>
