--- a/html/projects.html
+++ b/html/projects.html
@@ -26,52 +26,52 @@
     <div class="projects">
   
   <div class="project">
-    <div class="project-image big-image" style="background-image: url(../images/kfna-tech.png);"></div>
+    <div class="project-image big-image" style="background-image: url(../images/oasis-massage.png);"></div>
   
   <div class="project-padding">
-    <h3 class="biz-name">KFNA TECHNOLOGY</h3>
+    <h3 class="biz-name">OASIS MASSAGE STUDIO</h3>
     <p class="industry">
       <strong>Industry:</strong>
-      Cybersecurity
+      Health & Wellness
       <br>
       <strong>Tech:</strong>
       HTML & CSS 
     </p>
-    <p>A project designed to offer cybersecurity solutions. blah blah blah</p>
+    <p>A minimalistic site design for a small massage studio business.</p>
   
   </div>
   </div>
   
   <div class="project">
-    <div class="project-image big-image" style="background-image: url(../images/kfna-tech.png);"></div>
+    <div class="project-image big-image" style="background-image: url(../images/weather-app.png);"></div>
   
   <div class="project-padding">
-    <h3 class="biz-name">KFNA TECHNOLOGY</h3>
+    <h3 class="biz-name">The Weather App</h3>
     <p class="industry">
       <strong>Industry:</strong>
-      Cybersecurity
+      Weather
       <br>
       <strong>Tech:</strong>
-      HTML & CSS 
+      HTML, CSS, Javascript & API's
     </p>
-    <p>A project designed to offer cybersecurity solutions. blah blah blah</p>
+    <p>A weather app that provides current weather, weather conditions, wind speed and humidity levels in real time.</p>
   
   </div>
   </div>
   
   <div class="project">
-    <div class="project-image big-image" style="background-image: url(../images/blueberry-farm.png);"></div>
+    <div class="project-image big-image" style="background-image: url(../images/audiophile.png);"></div>
   
   <div class="project-padding">
-    <h3 class="biz-name"></h3>
+    <h3 class="biz-name">audiophile, inc</h3>
     <p class="industry">
       <strong>Industry:</strong>
-      Cybersecurity
+      Sound Solutions
       <br>
       <strong>Tech:</strong>
-      HTML & CSS 
+      React & CSS
     </p>
-    <p>A project designed to offer cybersecurity solutions. blah blah blah</p>
+    <p>A blog for sound lovers.</p>
   
   </div>
   </div>
