--- a/html/projects.html
+++ b/html/projects.html
@@ -1,137 +1,156 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
+  <body>
+    <nav class="navbar">
+      <ul id="nav">
+        <li class="nav-item"><a href="../index.html">home</a></li>
+        <li class="nav-item"><a href="about.html">about</a></li>
+        <li class="nav-item"><a href="#top">projects</a></li>
+        <li class="nav-item"><a href="contact.html">contact</a></li>
+      </ul>
+    </nav>
 
-  <nav class="navbar">
-    <ul id="nav">
-      <li class="nav-item"><a href="../index.html">home</a></li>
-      <li class="nav-item"><a href="about.html">about</a></li>
-      <li class="nav-item"><a href="#top">projects</a></li>
-      <li class="nav-item"><a href="contact.html">contact</a></li>
-    </ul>
-  </nav>
-  
+    <section id="projects">
+      <div class="title-block">
+        <p class="feature">Featured Projects</p>
+      </div>
+      <div class="projects">
+        <div class="project">
+          <div
+            class="project-image big-image"
+            style="background-image: url(../images/oasis-massage.png)"
+          ></div>
 
-<section id="projects">
-    <div class="title-block">
-      <p class="feature">Featured Projects</p>
-    </div>
-    <div class="projects">
-  
-  <div class="project">
-    <div class="project-image big-image" style="background-image: url(../images/oasis-massage.png);"></div>
-  
-  <div class="project-padding">
-    <h3 class="biz-name">OASIS MASSAGE STUDIO</h3>
-    <p class="industry">
-      <strong>Industry:</strong>
-      Health & Wellness
-      <br>
-      <strong>Tech:</strong>
-      HTML & CSS 
-    </p>
-    <p>A minimalistic site design for a small massage studio business.</p>
-  
-  </div>
-  </div>
-  
-  <div class="project">
-    <div class="project-image big-image" style="background-image: url(../images/weather-app.png);"></div>
-  
-  <div class="project-padding">
-    <h3 class="biz-name">The Weather App</h3>
-    <p class="industry">
-      <strong>Industry:</strong>
-      Weather
-      <br>
-      <strong>Tech:</strong>
-      HTML, CSS, Javascript & API's
-    </p>
-    <p>A weather app that provides current weather, weather conditions, wind speed and humidity levels in real time.</p>
-  
-  </div>
-  </div>
-  
-  <div class="project">
-    <div class="project-image big-image" style="background-image: url(../images/audiophile.png);"></div>
-  
-  <div class="project-padding">
-    <h3 class="biz-name">audiophile, inc</h3>
-    <p class="industry">
-      <strong>Industry:</strong>
-      Sound Solutions
-      <br>
-      <strong>Tech:</strong>
-      React & CSS
-    </p>
-    <p>A blog for sound lovers.</p>
-  
-  </div>
-  </div>
-  
-  <div class="project">
-    <div class="project-image big-image" style="background-image: url(../images/kfna-tech.png);"></div>
-  
-  <div class="project-padding">
-    <h3 class="biz-name">KFNA TECHNOLOGY</h3>
-    <p class="industry">
-      <strong>Industry:</strong>
-      Cybersecurity
-      <br>
-      <strong>Tech:</strong>
-      HTML & CSS 
-    </p>
-    <p>A project designed to offer cybersecurity solutions. blah blah blah</p>
-  
-  </div>
-  </div>
-  
-  <div class="project">
-    <div class="project-image big-image" style="background-image: url(../images/kfna-tech.png);"></div>
-  
-  <div class="project-padding">
-    <h3 class="biz-name">KFNA TECHNOLOGY</h3>
-    <p class="industry">
-      <strong>Industry:</strong>
-      Cybersecurity
-      <br>
-      <strong>Tech:</strong>
-      HTML & CSS 
-    </p>
-    <p>A project designed to offer cybersecurity solutions. blah blah blah</p>
-  
-  </div>
-  </div>
-  
-  <div class="project">
-    <div class="project-image big-image" style="background-image: url(../images/kfna-tech.png);"></div>
-  
-  <div class="project-padding">
-    <h3 class="biz-name">KFNA TECHNOLOGY</h3>
-    <p class="industry">
-      <strong>Industry:</strong>
-      Cybersecurity
-      <br>
-      <strong>Tech:</strong>
-      HTML & CSS 
-    </p>
-    <p>A project designed to offer cybersecurity solutions. blah blah blah</p>
-  
-  </div>
-  </div>
-  
-  
-    </div>
-  </section>
+          <div class="project-padding">
+            <h3 class="biz-name">OASIS MASSAGE STUDIO</h3>
+            <p class="industry">
+              <strong>Industry:</strong>
+              Health & Wellness
+              <br />
+              <strong>Tech:</strong>
+              HTML & CSS
+            </p>
+            <p>
+              A minimalistic site design for a small massage studio business.
+            </p>
+          </div>
+        </div>
 
-<a href="#top"><img class="top-btn" src="../images/to-top.png"></a>
+        <div class="project">
+          <div
+            class="project-image big-image"
+            style="background-image: url(../images/weather-app.png)"
+          ></div>
 
-</body>
+          <div class="project-padding">
+            <h3 class="biz-name">The Weather App</h3>
+            <p class="industry">
+              <strong>Industry:</strong>
+              Weather
+              <br />
+              <strong>Tech:</strong>
+              HTML, CSS, Javascript & API's
+            </p>
+            <p>
+              A weather app that provides current weather, weather conditions,
+              wind speed and humidity levels in real time.
+            </p>
+          </div>
+        </div>
+
+        <div class="project">
+          <div
+            class="project-image big-image"
+            style="background-image: url(../images/audiophile.png)"
+          ></div>
+
+          <div class="project-padding">
+            <h3 class="biz-name">audiophile, inc</h3>
+            <p class="industry">
+              <strong>Industry:</strong>
+              Sound Solutions
+              <br />
+              <strong>Tech:</strong>
+              React & CSS
+            </p>
+            <p>A blog for sound lovers.</p>
+          </div>
+        </div>
+
+        <div class="project">
+          <div
+            class="project-image big-image"
+            style="background-image: url(../images/kfna-tech.png)"
+          ></div>
+
+          <div class="project-padding">
+            <h3 class="biz-name">KFNA TECHNOLOGY</h3>
+            <p class="industry">
+              <strong>Industry:</strong>
+              Cybersecurity
+              <br />
+              <strong>Tech:</strong>
+              HTML & CSS
+            </p>
+            <p>
+              A project designed to offer cybersecurity solutions. blah blah
+              blah
+            </p>
+          </div>
+        </div>
+
+        <div class="project">
+          <div
+            class="project-image big-image"
+            style="background-image: url(../images/kfna-tech.png)"
+          ></div>
+
+          <div class="project-padding">
+            <h3 class="biz-name">KFNA TECHNOLOGY</h3>
+            <p class="industry">
+              <strong>Industry:</strong>
+              Cybersecurity
+              <br />
+              <strong>Tech:</strong>
+              HTML & CSS
+            </p>
+            <p>
+              A project designed to offer cybersecurity solutions. blah blah
+              blah
+            </p>
+          </div>
+        </div>
+
+        <div class="project">
+          <div
+            class="project-image big-image"
+            style="background-image: url(../images/kfna-tech.png)"
+          ></div>
+
+          <div class="project-padding">
+            <h3 class="biz-name">KFNA TECHNOLOGY</h3>
+            <p class="industry">
+              <strong>Industry:</strong>
+              Cybersecurity
+              <br />
+              <strong>Tech:</strong>
+              HTML & CSS
+            </p>
+            <p>
+              A project designed to offer cybersecurity solutions. blah blah
+              blah
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <a href="#top"><img class="top-btn" src="../images/to-top.png" /></a>
+  </body>
 </html>
