--- a/html/projects.html
+++ b/html/projects.html
@@ -86,29 +86,26 @@
         <div class="project">
           <div
             class="project-image big-image"
-            style="background-image: url(../images/kfna-tech.png)"
+            style="background-image: url(../images/photography.png)"
           ></div>
 
           <div class="project-padding">
-            <h3 class="biz-name">KFNA TECHNOLOGY</h3>
+            <h3 class="biz-name">Lauren Chavez Gallery</h3>
             <p class="industry">
               <strong>Industry:</strong>
-              Cybersecurity
+              Photography
               <br />
               <strong>Tech:</strong>
               HTML & CSS
             </p>
-            <p>
-              A project designed to offer cybersecurity solutions. blah blah
-              blah
-            </p>
+            <p>A photogrpahy portfolio.</p>
           </div>
         </div>
 
         <div class="project">
           <div
             class="project-image big-image"
-            style="background-image: url(../images/kfna-tech.png)"
+            style="background-image: url(../images/kfna.png)"
           ></div>
 
           <div class="project-padding">
@@ -120,10 +117,7 @@
               <strong>Tech:</strong>
               HTML & CSS
             </p>
-            <p>
-              A project designed to offer cybersecurity solutions. blah blah
-              blah
-            </p>
+            <p>A project designed to offer cybersecurity solutions.</p>
           </div>
         </div>
 
