--- a/html/about.html
+++ b/html/about.html
@@ -30,9 +30,12 @@
             <li class="list-item">Collaboration</li>
             <li class="list-item">Critical Thinking</li>
             <li class="list-item">Visual Thinking</li>
+            <li class="list-item">Community Work</li>
+            <li class="list-item">Teaching Youth</li>
             <li class="list-item">Creativity</li>
             <li class="list-item">Conflict Resolution</li>
             <li class="list-item">Adaptability</li>
+            <li class="list-item">Customer Service</li>
           </ul>
         </div>
         <div class="column column-2">
