--- a/html/projects.html
+++ b/html/projects.html
@@ -45,21 +45,21 @@
         <div class="project">
           <div
             class="project-image big-image"
-            style="background-image: url(../images/weather-app.png)"
+            style="background-image: url(../images/girls-in-stem.png)"
           ></div>
 
           <div class="project-padding">
-            <h3 class="biz-name">The Weather App</h3>
+
+            <h3 class="biz-name">Girls In STEM</h3>
             <p class="industry">
               <strong>Industry:</strong>
-              Weather
+              Education, Non-profit
               <br />
               <strong>Tech:</strong>
-              HTML, CSS, Javascript & API's
+              HTML, CSS, Bootstrap
             </p>
             <p>
-              A weather app that provides current weather, weather conditions,
-              wind speed and humidity levels in real time.
+              A non-profit organization that enrolls girls in STEM programs.
             </p>
           </div>
         </div>
@@ -77,7 +77,7 @@
               Sound Solutions
               <br />
               <strong>Tech:</strong>
-              React & CSS
+              Bootstrap & CSS
             </p>
             <p>A blog for sound lovers.</p>
           </div>
@@ -124,21 +124,22 @@
         <div class="project">
           <div
             class="project-image big-image"
-            style="background-image: url(../images/kfna-tech.png)"
+            style="background-image: url(../images/weather-app.png)"
           ></div>
 
           <div class="project-padding">
-            <h3 class="biz-name">KFNA TECHNOLOGY</h3>
+            
+            <h3 class="biz-name">The Weather App</h3>
             <p class="industry">
               <strong>Industry:</strong>
-              Cybersecurity
+              Weather
               <br />
               <strong>Tech:</strong>
-              HTML & CSS
+              HTML, CSS, Javascript & API's
             </p>
             <p>
-              A project designed to offer cybersecurity solutions. blah blah
-              blah
+              A weather app that provides current weather, weather conditions,
+              wind speed and humidity levels in real time.
             </p>
           </div>
         </div>
